--- a/extension/popup/styles/_downloads.scss
+++ b/extension/popup/styles/_downloads.scss
@@ -305,3 +305,11 @@
         }
     }
 }
+
+.error-message {
+    font-size: var(--font-body);
+    color: var(--color-red);
+    line-height: 1.3;
+    word-wrap: break-word;
+    
+}
